2009-01-03  Sebastien Pouliot  <sebastien@ximian.com>

	* CheckParametersNullityInVisibleMethodsRule.cs: Fix case
	for out parameters which were not ignored for arrays.
	[Fix #463003]

2008-12-30  Sebastien Pouliot  <sebastien@ximian.com>

	* EnsureLocalDisposalRule.cs: Resolve early (since IsProperty 
	rock would do it anyway) and use the MethodDefinition afterward.
	Based on patch from Tamara Roberson.
	* ProvideCorrectRegexPatternRule.cs: Move some checks after
	calling Resolve (to avoid calling it twice with IsProperty).
	[partial fix for #462925]

2008-12-29  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewSelfAssignmentRule.cs: Fix the check when a call chain
	containing an indexer is used.

2008-12-28  Cedric Vivier  <cedricv@neonux.com>

	* EnsureLocalDisposalRule.cs: New. Rule that checks if locals
	are guaranteed to be disposed of before the method returns.

2008-12-27  Jesse Jones  <jesjones@mindspring.com> 

	* ReviewInconsistentIdentityRule.cs: Added an assert to verify that
	equalityMethods's reserve size is sufficient.

2008-12-23  Cedric Vivier  <cedricv@neonux.com>

	* ProvideCorrectRegexPatternRule.cs: New. Rule that checks if
	methods/constructors are provided a valid regular expression pattern.

2008-12-19  Sebastien Pouliot  <sebastien@ximian.com>

	* CheckParametersNullityInVisibleMethodsRule.cs: Make sure (null ==
	obj) is treated identically to (obj == null). Note: code generated by
	mcs does not produce IL that resulted in false positives.

2008-12-19  Jesse Jones  <jesjones@mindspring.com> 

	* ReviewInconsistentIdentityRule.cs: Added.

2008-12-13  Jesse Jones  <jesjones@mindspring.com> 

	* ReviewUseOfInt64BitsToDoubleRule.cs: Fix AnalyzeModule so that it 
	activates the rule properly when multiple assemblies or modules are 
	being checked.

2008-12-10  Sebastien Pouliot  <sebastien@ximian.com>

	* ProvideCorrectArgumentsToFormattingMethodsRule.cs: Don't check
	the last char of a string for '{' since it's too late to read a digit