@@ -1,3 +1,9 @@
+2009-01-03  Sebastien Pouliot  <sebastien@ximian.com> 
+
+	* CheckParametersNullityInVisibleMethodsRule.cs: Refactor to
+	extract new methods from CheckMethod (self-test). Fix the typo in 
+	solution (mentioned in bug #463003).
+
 2009-01-03  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* CheckParametersNullityInVisibleMethodsRule.cs: Fix case
